fixed form on mobile view

--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -20,6 +20,7 @@
 }
 
 .form-contain {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -39,9 +40,6 @@
   /* width: 300px; */
 }
 
-.form-contain {
-}
-
 .form-dropdown-cont {
   display: grid;
   grid-template-columns: 1fr;
@@ -51,9 +49,24 @@
 
 .form-dropdown {
   display: grid;
-  grid-template-columns: 155px 155px;
+  /* grid-template-columns: 150px 150px; */
+  grid-template-columns: repeat(2, minmax(150px, 200px));
   /* grid-template-rows: 1fr 1fr; */
   column-gap: 10px;
+}
+
+#plsWork {
+  width: 100%;
+  margin: 0 1em;
+  padding: 10px 0;
+
+  display: grid;
+  place-items: center;
+  /* grid-template-columns: repeat(auto-fit, minmax(330px, 400px)); */
+  gap: 10px;
+}
+#plsWork-inner-container {
+  padding: 0 10px;
 }
 
 .submit-cont {
@@ -90,5 +103,27 @@ Table > * {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
+  }
+}
+
+@media (min-width: 1100px) {
+
+  .form-dropdown {
+    grid-template-columns: 170px 170px;
+    /* grid-template-columns: repeat(3, minmax(150px, 1fr)); */
+    /* grid-template-rows: 1fr 1fr; */
+  }
+  #plsWork {
+    width: 100%;
+    margin: 0 1em;
+    padding: 10px 0;
+    
+  }
+  #plsWork-inner-container {
+    max-width: 1100px;
+    display: grid;
+    place-content: center;
+    grid-template-columns: 1fr 1fr 160px;
+    column-gap: 10px;
   }
 }
